Reformat code to same-line-braces